--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "homepage": "https://github.com/adrienbelcastro/recipe-capstone-api#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.4.2",
     "latest": "^0.2.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.3.1",
+    "mysql2": "^3.6.0",
     "react": "^18.2.0",
     "react-scripts": "^5.0.1",
     "scripts": "^0.1.0",
