--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm rebuild bcrypt"
+    "postinstall": "npm rebuild bcrypt",
+    "seed": "node seeds/seed.js"
   },
   "repository": {
     "type": "git",
