made changes to url to see if cors error is fixed

--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,8 @@
       "dest": "/",
       "methods": ["POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "https://momentum-git-feature-api-test-adrienbelcastro.vercel.app/",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+        "Access-Control-Allow-Origin": "https://momentum-git-feature-api-test-adrienbelcastro.vercel.app/login",
+        "Access-Control-Allow-Methods": "POST, PUT, DELETE, PATCH, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization",
         "Access-Control-Allow-Credentials": "true"
       }
