--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "dest": "/",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "https://momentum-git-feature-api-test-adrienbelcastro.vercel.app",
+        "Access-Control-Allow-Origin": "https://momentum-iota.vercel.app",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization",
         "Access-Control-Allow-Credentials": "true"
